--- a/build.gradle
+++ b/build.gradle
@@ -138,7 +138,7 @@ protobuf {
   
 }
 
-tasks.withType<GenerateModuleMetadata> {
+tasks.withType(GenerateModuleMetadata).configureEach {
     enabled = false
 }
 
